--- a/webUploadAndPack/conf/app.conf
+++ b/webUploadAndPack/conf/app.conf
@@ -3,5 +3,11 @@ httpport = 8080
 runmode = dev
 Website = "www.baidu.com"
 Email = "fuck@baidu.com"
-#SavaDiskPath ="/home/landv/go/src/golang-test/webUploadAndPack/static/file/"
-SavaDiskPath ="C:\Users\Administrator\test\"
+##虚拟根部目录
+SavaDiskPath ="/home/landv/go/src/golang-test/webUploadAndPack/static/file/"
+##需要加壳的文件目录
+PackDiskPath ="/home/landv/go/src/golang-test/webUploadAndPack/static/file/原始文件/"
+#SavaDiskPath ="C:\Users\Administrator\test\"
+##DNGuard bin位置
+DNGuard="C:\\Users\\Administrator\\test"
+
